Replace new URL with URI.create().toUrl()