@@ -4,7 +4,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URL;
 import java.time.LocalDateTime;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -28,11 +27,11 @@ class IaasObjectStoreFileTest {
   @Test
   void testAllArgConstructor() throws MalformedURLException {
     file = new IaasObjectStoreFile(URI.create("file.txt"), LocalDateTime.of(2000, 1, 1, 0, 0),
-        new URL("http://localhost/"));
+        URI.create("http://localhost/").toURL());
 
     assertEquals(URI.create("file.txt"), file.getFileKey());
     assertEquals(LocalDateTime.of(2000, 1, 1, 0, 0), file.getExpiration());
-    assertEquals(new URL("http://localhost/"), file.getFileUrl());
+    assertEquals(URI.create("http://localhost/").toURL(), file.getFileUrl());
     assertNull(file.getVersion());
   }
 
@@ -56,8 +55,8 @@ class IaasObjectStoreFileTest {
 
   @Test
   void testGetSetFileUrl() throws MalformedURLException {
-    file.setFileUrl(new URL("http://localhost/"));
-    assertEquals(new URL("http://localhost/"), file.getFileUrl());
+    file.setFileUrl(URI.create("http://localhost/").toURL());
+    assertEquals(URI.create("http://localhost/").toURL(), file.getFileUrl());
   }
 
   @Test
