@@ -3,6 +3,7 @@ package io.trishul.tenant.dto;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -17,10 +18,10 @@ class AddTenantDtoTest {
 
   @Test
   void testAllArgConstructor() throws MalformedURLException {
-    tenantDto = new AddTenantDto("NAME", new URL("http://localhost/"));
+    tenantDto = new AddTenantDto("NAME", URI.create("http://localhost/").toURL());
 
     assertEquals("NAME", tenantDto.getName());
-    assertEquals(new URL("http://localhost/"), tenantDto.getUrl());
+    assertEquals(URI.create("http://localhost/").toURL(), tenantDto.getUrl());
   }
 
   @Test
@@ -32,7 +33,7 @@ class AddTenantDtoTest {
 
   @Test
   void testGetSetUrl() throws MalformedURLException {
-    URL url = new URL("https://localhost/");
+    URL url = URI.create("https://localhost/").toURL();
     tenantDto.setUrl(url);
     assertSame(url, tenantDto.getUrl());
   }
