@@ -1,6 +1,7 @@
 package io.trishul.tenant.entity;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.time.LocalDateTime;
 import java.util.UUID;
@@ -24,12 +25,12 @@ class TenantTest {
   @Test
   void testAllArgConstructor() throws MalformedURLException {
     tenant = new Tenant(UUID.fromString("89efec46-fd0b-4fec-bcde-7f4bcef4f8e9"), "TENANT_1",
-        new URL("http://localhost"), true, LocalDateTime.of(2000, 1, 1, 0, 0),
+        URI.create("http://localhost").toURL(), true, LocalDateTime.of(2000, 1, 1, 0, 0),
         LocalDateTime.of(2001, 1, 1, 0, 0));
 
     assertEquals(UUID.fromString("89efec46-fd0b-4fec-bcde-7f4bcef4f8e9"), tenant.getId());
     assertEquals("TENANT_1", tenant.getName());
-    assertEquals(new URL("http://localhost"), tenant.getUrl());
+    assertEquals(URI.create("http://localhost").toURL(), tenant.getUrl());
     assertEquals(LocalDateTime.of(2000, 1, 1, 0, 0), tenant.getCreatedAt());
     assertEquals(LocalDateTime.of(2001, 1, 1, 0, 0), tenant.getLastUpdated());
   }
@@ -67,7 +68,7 @@ class TenantTest {
 
   @Test
   void testGetSetUrl() throws MalformedURLException {
-    URL url = new URL("http://localhost");
+    URL url = URI.create("http://localhost").toURL();
     tenant.setUrl(url);
     assertSame(url, tenant.getUrl());
   }
@@ -89,7 +90,7 @@ class TenantTest {
   @Test
   void testToString_ReturnsJsonifiedString() throws JSONException, MalformedURLException {
     tenant = new Tenant(UUID.fromString("89efec46-fd0b-4fec-bcde-7f4bcef4f8e9"), "TENANT_1",
-        new URL("http://localhost"), true, LocalDateTime.of(2000, 1, 1, 0, 0),
+        URI.create("http://localhost").toURL(), true, LocalDateTime.of(2000, 1, 1, 0, 0),
         LocalDateTime.of(2001, 1, 1, 0, 0));
 
     final String json
